k8s/infra/deployment-hello.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  namespace: infra-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: whereami
        image: us-docker.pkg.dev/google-samples/containers/gke/whereami:v1.2.11
        ports:
          - containerPort: 8080
