k8s/infra/service-hello.yml
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: infra-ns
spec:
  selector:
    app: hello
  ports:
  - port: 8080
    targetPort: 8080
