k8s/infra/gateway-external.yml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: external-http
  namespace: infra-ns
  # annotations:
  #   networking.gke.io/certmap: NAME-OF-CERT-MAP-FOR-SSL
spec:
  gatewayClassName: gke-l7-gxlb
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    # only allow routes from namespaces with 'external-gateway-access' == 'true'
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            external-gateway-access: "true"
