k8s/infra/gateway-internal.yml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: internal-http
  namespace: infra-ns
spec:
  gatewayClassName: gke-l7-rilb
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    # only allow routes from namespaces with 'internal-gateway-access' == 'true'
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            internal-gateway-access: "true"
