k8s/infra/httproute-internal-hello.yml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: hello-internal
  namespace: infra-ns
spec:
  parentRefs:
  - kind: Gateway
    name: internal-http
  rules:
    - matches:
      - path:
          value: /hello-internal-world
      backendRefs:
      - name: hello
        port: 8080
